--- a/dot_config/ghostty/config
+++ b/dot_config/ghostty/config
@@ -1,4 +1,4 @@
-font-family = NotoMono
+font-family = "JetBrainsMono Nerd Font Mono"
 
 # gruvbox theme
 background = #282828
@@ -23,4 +23,3 @@ palette = 12=#83a598
 palette = 13=#d3869b
 palette = 14=#8ec07c
 palette = 15=#ebdbb2
-
