feat(tmux): Add shortcut for finding repo

--- a/dot_config/tmux/tmux.conf
+++ b/dot_config/tmux/tmux.conf
@@ -29,6 +29,9 @@ bind-key s split-window -v -c "#{pane_current_path}"
  bind-key B switch-client -l
  bind-key q display-panes
 
+#
+bind-key N run-shell -b fzf.tns # [N]ew tmux window/sessions
+
 # copy to clipboard
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
