--- a/private_dot_config/ghostty/config
+++ b/private_dot_config/ghostty/config
@@ -1,5 +1,7 @@
 font-family = "JetBrainsMono Nerd Font Mono"
 
+shell-integration = bash
+
 # gruvbox theme
 background = #282828
 foreground = #ebdbb2
