--- a/private_dot_config/starship.toml
+++ b/private_dot_config/starship.toml
@@ -19,7 +19,10 @@ $java\
 $kotlin\
 $haskell\
 $python\
+$terraform\
 [](fg:color_blue bg:color_bg3)\
+$aws\
+$kubernetes\
 $docker_context\
 $conda\
 [](fg:color_bg3 bg:color_bg1)\
@@ -66,11 +69,15 @@ Debian = "󰣚"
 Redhat = "󱄛"
 RedHatEnterprise = "󱄛"
 
+# section 1 (orange)
+
 [username]
 show_always = true
 style_user = "bg:color_orange fg:color_fg0"
 style_root = "bg:color_orange fg:color_fg0"
 format = '[ $user ]($style)'
+
+# section 2 (yellow)
 
 [directory]
 style = "fg:color_fg0 bg:color_yellow"
@@ -85,6 +92,8 @@ truncation_symbol = "…/"
 "Pictures" = " "
 "Developer" = "󰲋 "
 
+# section 3 (green)
+
 [git_branch]
 symbol = ""
 style = "bg:color_aqua"
@@ -94,18 +103,10 @@ format = '[[ $symbol $branch ](fg:color_fg0 bg:color_aqua)]($style)'
 style = "bg:color_aqua"
 format = '[[($all_status$ahead_behind )](fg:color_fg0 bg:color_aqua)]($style)'
 
-[nodejs]
-symbol = ""
-style = "bg:color_blue"
-format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
+# section 4 (blue)
 
 [c]
 symbol = " "
-style = "bg:color_blue"
-format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
-
-[rust]
-symbol = ""
 style = "bg:color_blue"
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
 
@@ -114,8 +115,13 @@ symbol = ""
 style = "bg:color_blue"
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
 
-[php]
-symbol = ""
+[haskell]
+symbol = ""
+style = "bg:color_blue"
+format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
+
+[helm]
+symbol = ""
 style = "bg:color_blue"
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
 
@@ -129,8 +135,13 @@ symbol = ""
 style = "bg:color_blue"
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
 
-[haskell]
-symbol = ""
+[nodejs]
+symbol = ""
+style = "bg:color_blue"
+format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
+
+[php]
+symbol = ""
 style = "bg:color_blue"
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
 
@@ -139,14 +150,44 @@ symbol = ""
 style = "bg:color_blue"
 format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
 
+[rust]
+symbol = ""
+style = "bg:color_blue"
+format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
+
+[terraform]
+symbol = ""
+style = "bg:color_blue"
+format = '[[ $symbol( $version) ](fg:color_fg0 bg:color_blue)]($style)'
+
+# section 5 (grey)
+
+[aws]
+style = "bg:color_bg3"
+format = '[[ $symbol($profile) ](fg:#83a598 bg:color_bg3)]($style)'
+[aws.region_aliases]
+us-east-1 = "use1"
+#[aws.profile_aliases]
+
+[kubernetes]
+disabled = false
+style = "bg:color_bg3"
+format = '[[ $symbol$context(\($namespace\)) ](fg:color_fg0 bg:color_bg3)]($style)'
+
+[[kubernetes.contexts]]
+context_pattern = "arn:aws:eks:us-east-1:(?P<account>[0-9]+):cluster/(?<cluster>[\\w-]+)"
+context_alias = "$cluster"
+
+[conda]
+style = "bg:color_bg3"
+format = '[[ $symbol( $environment) ](fg:#83a598 bg:color_bg3)]($style)'
+
 [docker_context]
 symbol = ""
 style = "bg:color_bg3"
 format = '[[ $symbol( $context) ](fg:#83a598 bg:color_bg3)]($style)'
 
-[conda]
-style = "bg:color_bg3"
-format = '[[ $symbol( $environment) ](fg:#83a598 bg:color_bg3)]($style)'
+# section 6 (black)
 
 [time]
 disabled = false
