feat(bash-completion): Use bash-completion to manage completions

--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -3,6 +3,7 @@ packages:
     - awscli
     - bat
     - bash
+    - bash-completion
     - coreutils
     - docker-compose
     - docker-credential-helper-ecr
