--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -57,7 +57,7 @@ packages:
     - amazon-q
     - font-jetbrains-mono-nerd-font
     - ghostty
-    - nikitabobko/tap/aerospace
+    #- nikitabobko/tap/aerospace
   npm:
     - catj
     - flow-bin
