--- a/.chezmoidata/packages.yaml
+++ b/.chezmoidata/packages.yaml
@@ -56,6 +56,7 @@ packages:
     - font-jetbrains-mono-nerd-font
     - ghostty
   npm:
+    - "@openai/codex"
     - "@github/copilot"
     - catj
     - flow-bin
