--- a/.chezmoidata/languages.yaml
+++ b/.chezmoidata/languages.yaml
@@ -1,3 +1,7 @@
 languages:
-  python: 3.12
-  go: 1.24
+  python: 3.12.12
+  golang: 1.25.5
+  java: openjdk-25
+  nodejs: latest
+  ruby: latest
+  rust: latest
